fix: improve specificity for accordion block spacing overrides

--- a/packages/block-library/src/accordion/style.scss
+++ b/packages/block-library/src/accordion/style.scss
@@ -7,7 +7,7 @@
 	grid-template-rows: max-content 1fr;
 }
 
-.accordion-content__heading {
+:where(.accordion-content__heading) {
 	margin-block-start: 0;
 	margin-block-end: 0;
 }
@@ -38,8 +38,7 @@
 	width: 100%;
 }
 
-.is-layout-flow > .wp-block-accordion-panel,
-.wp-block-accordion-panel {
+:where(.is-layout-flow > .wp-block-accordion-panel, .wp-block-accordion-panel) {
 	overflow: hidden;
 	margin: 0;
 }
